// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > model > putModelCard > 200 > ok 1`] = `
{
  "card": {
    "_id": "6776901b879d08e34b599d7e",
    "deleted": false,
    "id": "6776901b879d08e34b599d7e",
    "modelId": "test",
  },
}
`;

exports[`routes > model > putModelCard > audit > expected call 1`] = `"expedita"`;

exports[`routes > model > putModelCard > audit > expected call 2`] = `
{
  "_id": "6776901b879d08e34b599d7e",
  "deleted": false,
  "modelId": "test",
}
`;
